--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,12 @@ dependencies {
     //Network
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    //Testing
+    testImplementation 'junit:junit:4.13.2'
+
+    testImplementation 'androidx.test:core-ktx:1.4.0'
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
 }
 
 // Allow references to generated code
