--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MovieApp">
+        android:theme="@style/Theme.MovieApp"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.details.MovieDetailActivity"
             android:exported="false" />
