--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,35 +50,35 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Hilt
     implementation("com.google.dagger:hilt-android:2.38.1")
     kapt("com.google.dagger:hilt-android-compiler:2.38.1")
 
+    // Image loading
     implementation "io.coil-kt:coil:1.4.0"
 
+    // Architecture components
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
-
-    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.30"
-
-
 
     // Database
     implementation "androidx.room:room-runtime:2.4.2"
     implementation "androidx.room:room-ktx:2.4.2"
     kapt "androidx.room:room-compiler:2.4.2"
 
-    //Network
+    // Network
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
-    //Testing
+    // Testing
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation 'androidx.test:core-ktx:1.4.0'
     testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    //implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
-    androidTestImplementation "com.squareup.okhttp3:mockwebserver:3.14.9"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "com.squareup.okhttp3:mockwebserver:3.14.9"
 }
 
 // Allow references to generated code
